tests/ui/traits/trait-upcasting/illegal-upcast-from-impl.current.stderr
error[E0308]: mismatched types
  --> $DIR/illegal-upcast-from-impl.rs:16:66
   |
LL | fn illegal(x: &dyn Sub<Assoc = ()>) -> &dyn Super<Assoc = i32> { x }
   |                                        -----------------------   ^ expected trait `Super`, found trait `Sub`
   |                                        |
   |                                        expected `&dyn Super<Assoc = i32>` because of return type
   |
   = note: expected reference `&dyn Super<Assoc = i32>`
              found reference `&dyn Sub<Assoc = ()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
